--- a/alpaca-options-trader/package.json
+++ b/alpaca-options-trader/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
+    "better-react-mathjax": "^2.0.4-beta1",
     "dotenv": "^16.4.5",
     "path-browserify": "^1.0.1",
     "react": "^18.3.1",
