--- a/alpaca-options-trader/server/package.json
+++ b/alpaca-options-trader/server/package.json
@@ -11,8 +11,14 @@
   "description": "",
   "dependencies": {
     "@alpacahq/alpaca-trade-api": "^3.1.2",
+    "alphavantage": "^2.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
